# anyrun-hunspell

./: Cargo.toml  README.md  justfile
examples/: default_config.rs
src/: lib.rs
